@@ -282,6 +282,9 @@ Walt Nelson <wnelsonjr at comcast dot net>
 Warren Dukes <warren dot dukes at gmail dot com>
   libmpdclient
 
+warudemaru <warudemaru at users dot sourceforge dot net>
+  rss and vsize for top
+
 William DiPlacido <bimbasaari at yahoo dot com>
   Frequency from /proc/cpuinfo
   Some other SETI stuff
